--- a/package.json
+++ b/package.json
@@ -46,14 +46,65 @@
   },
   "homepage": "https://github.com/martinroob/ngx-i18nsupport/projects/tiny-translator#readme",
   "dependencies": {
+    "@angular-devkit/architect": "^0.800.0",
+    "@angular-devkit/core": "~8.0.0",
+    "@angular-devkit/schematics": "~8.0.0",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "^8.0.0",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/pwa": "^0.13.9",
+    "@angular/router": "~8.0.0",
+    "@angular/service-worker": "~8.0.0",
+    "core-js": "^2.6.2",
+    "hammerjs": "^2.0.8",
+    "rxjs": "6.5.2",
+    "tokenizr": "1.4.0",
+    "tsickle": "0.35.0",
+    "zone.js": "~0.9.1",
     "@ngx-i18nsupport/ngx-i18nsupport-lib": "^1.11.0",
     "@types/js-base64": "^2.3.1",
-    "core-js": "^2.4.1",
     "file-saver": "^2.0.0",
     "flag-icon-css": "^2.8.0",
     "js-base64": "^2.5.1"
   },
   "devDependencies": {
-    "replace": "^0.3.0"
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-ng-packagr": "~0.800.0",
+    "@angular/cli": "~8.0.0",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
+    "@types/jasmine": "~3.3.5",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.12.18",
+    "@types/request": "^2.48.1",
+    "codelyzer": "~5.0.1",
+    "coveralls": "^3.0.0",
+    "cpx": "^1.5.0",
+    "cross-env": "^5.1.1",
+    "istanbul": "^0.4.5",
+    "jasmine-core": "~3.3.0",
+    "jasmine-node": "^1.14.5",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "lcov-result-merger": "^3.1.0",
+    "move-cli": "^1.2.0",
+    "ng-packagr": "^5.2.0",
+    "protractor": "~5.4.2",
+    "replace": "^1.0.1",
+    "ts-node": "~7.0.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.16.0",
+    "typescript": "~3.4.5"
   }
 }
